<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:mainActivity="com.zt.school.activity.MainActivity">

    <FrameLayout
        android:id="@+id/id_mian_activity_framelayout"
        android:background="#e1e1e1"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <TextView
        android:background="@android:color/black"
        android:alpha="0.2"
        android:layout_width="match_parent"
        android:layout_height="0.1px"
        tools:ignore="Suspicious0dp" />
        <RadioGroup
            android:id="@+id/id_mian_activity_radiogroup"
            android:background="#F7F7F7"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_home"
                android:text="@string/radio_tv_ysa"
                android:checked="true"
                android:drawableTop="@drawable/radio_ysa_iv_selector"
                style="@style/bottom_radio_style"
                />
            <RadioButton
                android:id="@+id/radio_shop"
                android:text="@string/radio_tv_fj"
                android:drawableTop="@drawable/radio_service_iv_selector"
                style="@style/bottom_radio_style"
                />
            <RadioButton
                android:id="@+id/radio_video"
                android:text="@string/radio_tv_video"
                android:drawableTop="@drawable/radio_video_iv_selector"
                style="@style/bottom_radio_video_style"
                />
            <RadioButton
                android:id="@+id/radio_order"
                android:text="@string/radio_tv_order"
                android:drawableTop="@drawable/radio_nearby_iv_selector"
                style="@style/bottom_radio_style"
                />
            <RadioButton
                android:id="@+id/radio_mine"
                android:text="@string/radio_tv_mine"
                android:drawableTop="@drawable/radio_mine_iv_selector"
                style="@style/bottom_radio_style"
                />
        </RadioGroup>
</LinearLayout>
